--- a/Backend/FYP_server/package.json
+++ b/Backend/FYP_server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon Server.js"
+    "start": "nodemon --env-file=.env Server.js"
   },
   "keywords": [],
   "author": "",
